Updated changes for search and login

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -86,7 +86,7 @@ margin-top: 0.25rem;
 .input-container input:not(:placeholder-shown) + label {
 top: -0.5rem;
 font-size: 0.9rem;
-color: #6a11cb;
+color: #000000;
 background: #fff;
 padding: 0 0.25rem;
 }
