--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,5 @@
 <div class="search-container">
+  <app-navbar></app-navbar>
   <!-- Main grid layout -->
   <div class="search-grid">
     <!-- Left Sidebar for Filters -->
