Fixed navbar and sizes

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   <div class="nav-links">
     <button pButton type="button" class="p-button-text" label="Search" icon="pi pi-search" (click)="navigate('/search')"></button>
     <button pButton type="button" class="p-button-text" label="Favorites" icon="pi pi-heart" (click)="navigate('/favorites')"></button>
-    <button pButton type="button" class="p-button-text" label="Matches" icon="pi pi-star" (click)="navigate('/match')"></button>
+    <button pButton type="button" class="p-button-text" label="Match" icon="pi pi-star" (click)="navigate('/match')"></button>
     <button pButton type="button" class="p-button-text p-button-danger" icon="pi pi-sign-out" label="Logout" (click)="logout()"></button>
   </div>
 </div>
