--- a/src/app/components/search/search.component.css
+++ b/src/app/components/search/search.component.css
@@ -10,6 +10,13 @@
   left: 0;
 }
 
+::ng-deep .p-dropdown{
+  width: 350px;
+}
+::ng-deep .p-multiselect{
+  width: 350px;
+}
+
 /* Main Grid Layout */
 .search-grid {
   display: flex;
@@ -81,7 +88,7 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 95%;
   transition: all 0.3s ease;
   padding: 0;
   background-color: #f8f9fa;
@@ -128,6 +135,8 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+  justify-content: flex-end;
+  width: 98%;
 }
 
 /* Dogs Grid */
@@ -135,7 +144,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1.5rem;
-  padding: 1.5rem;
+  padding: 0rem 1.5rem;
   overflow-y: auto;
   flex-grow: 1;
 }
