--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,38 @@
+<!-- navbar.component.html -->
 <div class="navbar">
   <div class="logo">
     <span>🐾 PawFinder</span>
   </div>
+  <div class="search-container">
+    <p-autoComplete
+      [(ngModel)]="searchQuery"
+      [suggestions]="filteredBreeds"
+      (completeMethod)="filterBreeds($event)"
+      (onSelect)="onSearch($event)"
+      placeholder="Search for Breeds..."
+      [dropdown]="true"
+      [showClear]="true"
+      (onClear)="clearSearch()"
+    >
+      <ng-template let-breed pTemplate="item">
+        <div class="search-item">
+          <i class="pi pi-search"></i>
+          <span>{{breed}}</span>
+        </div>
+      </ng-template>
+    </p-autoComplete>
+  </div>
   <div class="nav-links">
-    <button pButton type="button" class="p-button-text" label="Search" icon="pi pi-search" (click)="navigate('/search')"></button>
     <button pButton type="button" class="p-button-text" label="Favorites" icon="pi pi-heart" (click)="navigate('/favorites')"></button>
-    <button pButton type="button" class="p-button-text" label="Match" icon="pi pi-star" (click)="navigate('/match')"></button>
+    <button 
+      pButton 
+      type="button" 
+      class="p-button-text" 
+      [ngClass]="{'highlight-match': hasMatches}"
+      label="Match" 
+      icon="pi pi-star" 
+      (click)="matchClick.emit()"
+    ></button>
     <button pButton type="button" class="p-button-text p-button-danger" icon="pi pi-sign-out" label="Logout" (click)="logout()"></button>
   </div>
 </div>
