--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div class="nav-links">
-    <button pButton type="button" class="p-button-text" label="Favorites" icon="pi pi-heart"></button>
+    <button pButton type="button" class="p-button-text" label="Favorites" icon="pi pi-heart" (click)="navigate('/favorites')"></button>
     <button 
       pButton 
       type="button" 
